--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
-    --gutter: 30px;
+    --gutter: 20px;
     --footer-height: 25px;
     
     font-family: 'Montserrat', sans-serif;
@@ -28,6 +28,26 @@ main {
     justify-content: center;
     align-items: center;
     margin-bottom: calc(var(--footer-height));
+}
+
+.all-in-one {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: calc(var(--footer-height));
+    background-color: var(--color5);
+    width: 1000px;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: var(--gutter);
+    padding-bottom: var(--gutter);
+    margin-top: var(--gutter);
+    margin-bottom: var(--gutter);
+    border: solid 2px var(--color1);
 }
 
 section {
@@ -112,8 +132,11 @@ ul {
     flex-direction: column;
 }
 
-.calc-button {
-
+span {
+    color: white;
+    font-size: large;
+    padding-top: 10px;
+    
 }
   
 @keyframes pulse {
