--- a/style.css
+++ b/style.css
@@ -98,11 +98,48 @@ h2 {
     animation: pulse 5s infinite ease-in-out;
 }
 
+button {
+    border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -10px;
+    transition: 0.5s;
+}
+
+button:hover span {
+    padding-right: 20px;
+}
+  
+button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
 header img {
     height: var(--header-height);
 }
-
-
 
 content {
     width: 80%;
